Menambahkan API untuk transaksi
